<resources>
    <string name="app_name">City Country &amp; River</string>
    <string name="select_fields">Please select categories to play</string>
    <string name="checkbox_city">City</string>
    <string name="checkbox_country">Country</string>
    <string name="checkbox_river">River</string>
    <string name="checkbox_mountain">Mountain</string>
    <string name="select_difficulty">Please choose your level of difficulty</string>
    <string name="select_difficulty_easy">Easy letters</string>
    <string name="select_difficulty_middle">Medium letters</string>
    <string name="select_difficulty_hard">Hard letters</string>
    <string name="start_button">start</string>
    <string name="stop_button">stop</string>
    <string name="letter_to_play">Letter:</string>
    <string name="play_header_city">City</string>
    <string name="play_header_country">Country</string>
    <string name="play_header_river">River</string>
    <string name="show_score">Stop and Show Score</string>
    <string name="you_scored">You scored</string>
    <string name="difficulty">difficulty:</string>
    <string name="not_bad">Not bad!</string>
    <string name="true_expert">You are a true expert!</string>
    <string name="points">points</string>
    <string name="time_score">time score:</string>
    <string name="correct_answers">correct answers:</string>
    <string name="try_again">Try again!</string>
    <string name="start_game">Plaese press START</string>
    <string name="easy_letters">ACDEFNRST</string>
    <string name="middle_letters">BGHJKLMPU</string>
    <string name="hard_letters">IOQVWXYZ</string>
</resources>

