<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.stadtlandfluss.TableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Load the toolbar -->
        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/select_fields" />

            <CheckBox
                android:id="@+id/play_checkbox_city"
                style="@style/checkBox"
                android:text="@string/checkbox_city" />

            <CheckBox
                android:id="@+id/play_checkbox_country"
                style="@style/checkBox"
                android:text="@string/checkbox_country" />

            <CheckBox
                android:id="@+id/play_checkbox_river"
                style="@style/checkBox"
                android:text="@string/checkbox_river" />

            <CheckBox
                android:id="@+id/play_checkbox_mountain"
                style="@style/checkBox"
                android:text="@string/checkbox_mountain" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
