<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.android.stadtlandfluss.TableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Load the toolbar -->
        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/select_difficulty" />

            <RadioGroup
                android:id="@+id/radio_group_select_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radiobutton_easy">

                <RadioButton
                    android:id="@+id/radiobutton_easy"
                    style="@style/checkBox"
                    android:text="@string/select_difficulty_easy" />

                <RadioButton
                    android:id="@+id/radiobutton_middle"
                    style="@style/checkBox"
                    android:checked="false"
                    android:text="@string/select_difficulty_middle" />

                <RadioButton
                    android:id="@+id/radiobutton_hard"
                    style="@style/checkBox"
                    android:checked="false"
                    android:text="@string/select_difficulty_hard" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
